--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import './base/reset';
+@import './sections/header';
 @import './views/signIn';
 @import './views/home';
 @import './views/signUp';
