--- a/styles/style.css
+++ b/styles/style.css
@@ -263,6 +263,7 @@
   position: fixed;
   top: 8.5vh;
   height: 90.5vh;
+  z-index: 100;
 }
 .container-home .aside-home__ul {
   display: flex;
@@ -304,7 +305,8 @@
   justify-content: space-evenly;
   align-items: center;
   position: fixed;
-  margin-left: 8vw;
+  margin-left: 3vw;
+  background-color: rgba(255, 255, 255, 0.9215686275);
 }
 .container-home .bar-home__btn {
   padding: 0.5rem 1rem;
