--- a/styles/views/_home.scss
+++ b/styles/views/_home.scss
@@ -1,5 +1,9 @@
 @import "../utilities/mixins";
 // CUERPO DEL HOME
+
+
+
+
 .container-home {
     display: grid;
     grid-template-areas:"aside bar"
@@ -11,6 +15,7 @@
         position:fixed;
         top: 8.5vh;
         height: 90.5vh;
+        z-index: 100;
         &__ul{
             display: flex;
             height: 100%;
@@ -54,7 +59,8 @@
         justify-content: space-evenly;
         align-items: center;
         position: fixed;
-        margin-left: 8vw;
+        margin-left: 3vw;
+        background-color: #ffffffeb;
         &__btn{
             padding: 0.5rem 1rem;
             margin: 1vh 1vw;
