--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -1,10 +1,12 @@
 .header {
     display: grid;
-    height: 9.5vh;
+    height: 5vh;
+    margin-top: 1vh;
     background-color: #ffffffeb;
-    grid-template-columns: 35% 45% 20%;
+    grid-template-columns: 60% 40%;
     position:sticky;
     top: 0;
+    z-index: 100;
     // INICIO HEADER
     &__start {
         display: flex;
@@ -17,49 +19,8 @@
         }
         &--brand {
             a{
-                font-size: 1.5rem;
+                font-size: 1.2rem;
                 color: #00008b;
-            }
-        }
-    }
-    // CENTRO HEADER
-    &__center {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        .header__search {
-            background-color: transparent;
-            border: 1px solid #f6d794;
-            border-radius: 14px;
-            width: 40vw;
-            height: 5vh;
-            display: grid;
-            grid-template-columns: 90% 10%;
-            &--input {
-                width: 100%;
-                overflow: hidden;
-                ::placeholder {
-                    color: #00008b;
-                }
-            }
-            .search__input {
-                background-color: transparent;
-                border: none;
-                height: 100%;
-                width: 100%;
-                text-align: center;
-                letter-spacing: 0.2rem;
-                &:focus {
-                    outline: none;
-                }
-            }
-            &--btn {
-                display: flex;
-                margin: auto;
-                lord-icon{
-                    width: 1.6rem;
-                    height: 1.6rem;
-                }
             }
         }
     }
