--- a/styles/style.css
+++ b/styles/style.css
@@ -10,11 +10,13 @@
 
 .header {
   display: grid;
-  height: 9.5vh;
+  height: 5vh;
+  margin-top: 1vh;
   background-color: rgba(255, 255, 255, 0.9215686275);
-  grid-template-columns: 35% 45% 20%;
+  grid-template-columns: 60% 40%;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 .header__start {
   display: flex;
@@ -25,51 +27,8 @@
   color: #00008b;
 }
 .header__start--brand a {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #00008b;
-}
-.header__center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header__center .header__search {
-  background-color: transparent;
-  border: 1px solid #f6d794;
-  border-radius: 14px;
-  width: 40vw;
-  height: 5vh;
-  display: grid;
-  grid-template-columns: 90% 10%;
-}
-.header__center .header__search--input {
-  width: 100%;
-  overflow: hidden;
-}
-.header__center .header__search--input ::-moz-placeholder {
-  color: #00008b;
-}
-.header__center .header__search--input ::placeholder {
-  color: #00008b;
-}
-.header__center .header__search .search__input {
-  background-color: transparent;
-  border: none;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  letter-spacing: 0.2rem;
-}
-.header__center .header__search .search__input:focus {
-  outline: none;
-}
-.header__center .header__search--btn {
-  display: flex;
-  margin: auto;
-}
-.header__center .header__search--btn lord-icon {
-  width: 1.6rem;
-  height: 1.6rem;
 }
 .header__end {
   display: flex;
@@ -255,218 +214,140 @@
 
 .container-home {
   display: grid;
-  grid-template-areas: "aside bar" "aside main";
-}
-.container-home .aside-home {
-  grid-area: aside;
-  width: 7.7vw;
-  position: fixed;
-  top: 8.5vh;
-  height: 90.5vh;
-  z-index: 100;
-}
-.container-home .aside-home__ul {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
-  list-style-type: none;
-  justify-content: space-around;
-  margin: 0 1.5vw;
-}
-.container-home .aside-home__ul .aside-home__li {
-  height: 10vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-radius: 4px;
-}
-.container-home .aside-home__ul .aside-home__li:hover {
-  background-color: #f6d794;
-  cursor: pointer;
-}
-.container-home .aside-home__ul .aside-home__li a {
-  text-align: center;
-}
-.container-home .aside-home__ul .aside-home__li a lord-icon {
-  width: 1.6rem;
-  height: 1.6rem;
-}
-.container-home .aside-home__ul .aside-home__li p {
-  color: #00008b;
-  font-size: 0.75rem;
-  text-align: center;
 }
 .container-home .bar-home {
-  grid-area: bar;
   height: 6vh;
   width: 100%;
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: 7vw 86vw 7vw;
   align-items: center;
   position: fixed;
-  margin-left: 3vw;
   background-color: rgba(255, 255, 255, 0.9215686275);
+  z-index: 100;
 }
-.container-home .bar-home__btn {
-  padding: 0.5rem 1rem;
-  margin: 1vh 1vw;
-  border: none;
-  background-color: #f6d794;
-  border-radius: 6px;
-}
-.container-home .bar-home__btn--text {
-  color: #00008b;
-}
-.container-home .bar-home__btn:hover {
-  background-color: #ffdb8c;
-  cursor: pointer;
-  border-bottom: solid 1px #ffdb8c;
-}
-.container-home .bar-home__btn .selected {
-  background-color: #4070F4;
+.container-home .bar-home__arrow {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
 }
 .container-home .bar-home__arrow--btn {
+  position: fixed;
   height: 3vh;
   width: 4vw;
   border: none;
   background-color: transparent;
   background-size: cover;
   background-position: center;
-  background-image: url("../../images/forwardarrow_haciaadelante_4836.png");
 }
 .container-home .bar-home__arrow--btn:hover {
   scale: 1.05;
 }
+.container-home .bar-home__arrow .arrow-left__btn {
+  background-image: url("../../images/back_arrow_5821.png");
+}
+.container-home .bar-home__arrow .arrow-right__btn {
+  background-image: url("../../images/forwardarrow_haciaadelante_4836.png");
+}
+.container-home .bar-home__btns {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+.container-home .bar-home__btns--btn {
+  padding: 0.5rem 1rem;
+  margin: 1vh 1vw;
+  border: none;
+  background-color: #f6d794;
+  border-radius: 6px;
+}
+.container-home .bar-home__btns--btn-text {
+  color: #00008b;
+}
+.container-home .bar-home__btns--btn:hover {
+  background-color: #ffdb8c;
+  cursor: pointer;
+  border-bottom: solid 1px #ffdb8c;
+}
 .container-home .main-home {
-  grid-area: main;
-  width: 88.3vw;
-  position: relative;
-  margin-left: 8vw;
-  margin-top: 6vh;
-  overflow: hidden;
-  z-index: -100;
+  width: 100%;
+  margin-top: 4.7vh;
+  z-index: 0;
 }
 .container-home .main-home__recommended {
   margin-bottom: 2vh;
-}
-.container-home .main-home__recommended--h1 {
-  font-size: 2rem;
-  margin-top: 2vh;
-  margin-left: 0.2vw;
-}
-.container-home .main-home__recommended-container {
   display: flex;
-  height: 20.5vh;
-  justify-content: flex-start;
+  flex-direction: column;
 }
-.container-home .main-home__recommended-container .main-home__recommended-box {
+.container-home .main-home__recommended--section {
+  height: 30vh;
+}
+.container-home .main-home__recommended--section .main-home__recommended--h1 {
+  font-size: 1.3rem;
+  margin-top: 1.6vh;
+  margin-left: 5vw;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container {
   display: grid;
-  margin: 1vh 0.2vw;
-  background-color: gainsboro;
-  grid-template-rows: 65% 35%;
-  min-width: 17vw;
+  grid-template-columns: 5vw 90vw 5vw;
+  height: 25vh;
+  margin: 1vh 0;
 }
-.container-home .main-home__recommended-container .main-home__recommended-box img {
-  max-width: 100%;
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__arrow {
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__arrow--btn {
+  position: fixed;
+  height: 3vh;
+  width: 4vw;
+  border: none;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__arrow--btn:hover {
+  scale: 1.05;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .arrow-left__btn {
+  background-image: url("../../images/back_arrow_5821.png");
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .arrow-right__btn {
+  background-image: url("../../images/forwardarrow_haciaadelante_4836.png");
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes--box {
+  display: grid;
+  margin: 0 1vw;
+  border: #00008b 1px solid;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes--box .main-home__recommended--pic {
+  width: 43vw;
+  max-height: 16vh;
+  display: flex;
+  justify-content: center;
+  border-bottom: #00008b 1px solid;
+}
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes--box .main-home__recommended--pic-img {
   max-height: 100%;
 }
-.container-home .main-home__recommended-container .main-home__recommended-info {
-  background-color: rebeccapurple;
-}
-.container-home .main-home__recommended-container .main-home__recommended-info--body {
-  line-height: 1.5;
-}
-.container-home .main-home__current--h2 {
-  font-size: 2rem;
-  margin-top: 2vh;
-  margin-left: 0.2vw;
-}
-.container-home .main-home__current-container .main-home__current-box {
-  display: grid;
-  grid-template-columns: 35% 65%;
-}
-.container-home .main-home__current-container .main-home__current-info {
-  margin: 0.4vh 0 0.1vh 1vw;
-}
-.container-home .main-home__current-container .main-home__current-info--body {
-  line-height: 1.5;
-}
-.container-home .main-home__current-container .main-home__current-info--title {
-  font-size: 1.3rem;
-}
-.container-home .main-home__slide-container {
-  min-height: 50vh;
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes--box .main-home__recommended--title {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #EFEFEF;
+  padding: 1vh;
 }
-.container-home .main-home__slide-container .main-home__slide-content {
-  margin: 0 40px;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card {
-  border-radius: 25px;
-  background-color: #FFF;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content {
-  padding: 10px 14px;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  row-gap: 5px;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background-color: #4070F4;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay .main-home__card-image {
-  position: relative;
-  height: 23vh;
-  width: 20vw;
-  border-radius: 50%;
-  background-color: #FFF;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__image-content .main-home__overlay .main-home__card-image .main-home__card-img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 50%;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content {
-  padding: 10px 14px;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--name {
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--description {
-  font-size: 14px;
-  color: #707070;
+.container-home .main-home__recommended--section .main-home__recommended--container .main-home__recommended-boxes--box .main-home__recommended--title-p {
+  color: #00008b;
   text-align: center;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--button {
-  border: none;
-  font-size: 16px;
-  color: #FFF;
-  padding: 8px 16px;
-  background-color: #4070F4;
-  border-radius: 6px;
-  margin: 14px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.container-home .main-home__slide-container .main-home__slide-content .main-home__card-wrapper .main-home__card .main-home__card-content--button:hover {
-  background-color: #265DF2;
+  align-self: center;
+  font-size: 1.3rem;
 }
 
 .grid-container-sign .main-Sign__container .main-Sign__form .main-Sign__input option {
@@ -475,10 +356,6 @@
   border: none;
 }
 
-.container-home {
-  display: grid;
-  grid-template-areas: "aside main";
-}
 .container-home .main-tools {
   grid-area: main;
   width: 88.3vw;
