--- a/styles/views/_tools.scss
+++ b/styles/views/_tools.scss
@@ -1,6 +1,6 @@
 .container-home{
-    display: grid;
-    grid-template-areas:"aside main";
+    // display: grid;
+    // grid-template-areas:"aside main";
     // MAIN
     .main-tools {
         grid-area: main;
